# aiornot_small_image

./: inference_onnx.py  inference_triton.py  make_sym_links.sh  pyproject.toml  readme.md
.dvc/: config
resnet/: config.pbtxt
resnet/1/: .gitignore  v56_9.yaml_model_20250507_135857_9.onnx.dvc
rine_vit/: config.pbtxt
rine_vit/1/: .gitignore  rine_vit_large_last.onnx.dvc
